appId: com.webkul.bagisto.mobikul
---
- launchApp
- tapOn: "Login"
- tapOn: "Forgot Password?"
- inputText: "user@example.com"
- tapOn: "Send Reset Link"
- assertVisible: "Email sent"